release/1.8.5/VERSION.md
# 1.8.5

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.8.5```   |
| Release Time   | ```2015-05-22T11:15:28+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.8```   |
| sha1   | ```f6ad102bcaa53b1a58358f16e376d548d44933ec```   |
| size   | ```78494```   |
| total size  | ```114885064```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/f6ad102bcaa53b1a58358f16e376d548d44933ec/1.8.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```5d39957c61d19042f8bd669a6faa99989cf37083```   |
| size   | ```8462879```   |
| url       | ```https://launcher.mojang.com/v1/objects/5d39957c61d19042f8bd669a6faa99989cf37083/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```ea6dd23658b167dbc0877015d1072cac21ab6eee```   |
| size   | ```9781878```   |
| url       | ```https://launcher.mojang.com/v1/objects/ea6dd23658b167dbc0877015d1072cac21ab6eee/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |